examples/negative/silent_contract/pattern_duplicate_literal_arm.kai
# Silent contract (#520 audit, category 2 / patterns): two arms
# of a `match` use the same integer literal `1`. The second arm
# is unreachable. kaikai accepts. The reachability/exhaustiveness
# pass should flag the duplicate arm.
#
# See examples/negative/silent_contract/README.md for follow-up.

fn f(x: Int) : Int = match x {
  1 -> 10
  1 -> 20
  _ -> 0
}

fn main() : Int = f(1)
